--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-h1{
+#stopwatch{
     text-align: center;
     font-size: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -22,6 +22,75 @@ h1{
     box-shadow:#00000040 0px 54px 55px, #0000001f 0px -12px 30px, #0000001f 0px 4px 6px, #0000002b 0px 12px 13px, #00000017 0px -3px 5px;
 }
 
+#hr1{
+    width: 20px;
+    height: 20px;
+    background-color: #c7c7c7;
+    position: absolute;
+    border-radius: 10px;
+    top: 70px;
+    left: 70px;
+    padding: 35px;
+}
+
+#hr1 h1{
+    font-size: 50p
+}
+
+#hr2{
+    width: 20px;
+    height: 20px;
+    background-color: #c7c7c7;
+    border-radius: 10px;
+    position: absolute;
+    top: 70px;
+    left: 180px;
+    padding: 35px;
+}
+
+#min1{
+    width: 20px;
+    height: 20px;
+    background-color: #c7c7c7;
+    border-radius: 10px;
+    position: absolute;
+    top: 70px;
+    left: 340px;
+    padding: 35px;
+}
+
+#min2{
+    width: 20px;
+    height: 20px;
+    background-color: #c7c7c7;
+    border-radius: 10px;
+    position: absolute;
+    top: 70px;
+    left: 450px;
+    padding: 35px;
+}
+
+#sec1{
+    width: 20px;
+    height: 20px;
+    background-color: #c7c7c7;
+    border-radius: 10px;
+    position: absolute;
+    top: 70px;
+    left: 610px;
+    padding: 35px;
+}
+
+#sec2{
+    width: 20px;
+    height: 20px;
+    background-color: #c7c7c7;
+    border-radius: 10px;
+    position: absolute;
+    top: 70px;
+    left: 720px;
+    padding: 35px;
+}
 #start{
     position: absolute;
     top: 25rem;
