--- a/style.css
+++ b/style.css
@@ -2,12 +2,22 @@
     margin: 0;
     padding: 0;
 }
+#button{
+    height: 30px;
+    width: 60px;
+    position: absolute;
+    left: 80rem;
+    top: 10px;
+    border: none;
+    border-radius: 10px;
+    background-color: #d6d6d6;
+
+}
 
 #stopwatch{
     text-align: center;
     font-size: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: salmon;
 }
 
 #box{
@@ -25,7 +35,7 @@
 #hr1{
     width: 20px;
     height: 20px;
-    background-color: #c7c7c7;
+    background-color: #d6d6d6;
     position: absolute;
     border-radius: 10px;
     top: 70px;
@@ -144,5 +154,5 @@
 }
 
 body{
-    background-color: #00f2ff;
+
 }
